<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@drawable/icon_run"
        android:title="@string/correr"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_history"
        android:title="@string/record"
        android:icon="@drawable/menu_gallery"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_premium"
        android:title="@string/menu_premium"
        android:icon="@android:drawable/star_on"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_account"
        android:title="@string/menu_cuenta"

        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_clear_prefs"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/menu_limpiar"/>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/cerrarsesion"
                android:title="@string/menu_salir"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_ad"
        android:title="@string/menu_anuncio"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_ad_settings"
                android:icon="@drawable/common_full_open_on_phone"
                android:title="@string/menu_obtener_oferta"/>

        </menu>
    </item>
</menu>